edited meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="keywords" content="Marisol Garcia, Portfolio, Front-end Developer, UNC Charlotte, Computer Science, Software Engineering, Girls Who Code, Illustrator">
-    <meta name="description" content="Marisol Garcia, front-end web developer."/>
+    <meta name="description" content="Marisol Garcia is a front-end web developer. Recent computer science graduate from UNC Charlotte."/>
     <meta name="author" content="Marisol Garcia">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
 
+    <meta
+      property="og:title"
+      content="Marisol Garcia"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://www.marsgs.com/" />
+    <meta
+      property="og:image"
+      content="http://www.marsgs.com/thumbnail.png"
+    />
+    <meta
+      property="og:description"
+      content="Marisol Garcia is a front-end web developer. Recent computer science graduate from UNC Charlotte."
+    />
 
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" /> -->
     <!--
