--- a/public/index.html
+++ b/public/index.html
@@ -5,25 +5,24 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="keywords" content="Marisol Garcia, Portfolio, Front-end Developer, UNC Charlotte, Computer Science, Software Engineering, Girls Who Code, Illustrator">
-    <meta name="description" content="Marisol Garcia is a front-end web developer. Recent computer science graduate from UNC Charlotte."/>
-    <meta name="author" content="Marisol Garcia">
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
-
     <meta
-      property="og:title"
-      content="Marisol Garcia"
+      name="keywords"
+      content="Marisol Garcia, Portfolio, Front-end Developer, UNC Charlotte, Computer Science, Software Engineering, Girls Who Code, Illustrator"
     />
+    <meta
+      name="description"
+      content="Marisol Garcia is a front-end web developer. Recent computer science graduate from UNC Charlotte."
+    />
+    <meta name="author" content="Marisol Garcia" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <meta property="og:title" content="Marisol Garcia" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://www.marsgs.com/" />
-    <meta
-      property="og:image"
-      content="http://www.marsgs.com/thumbnail.png"
-    />
+    <meta property="og:image" content="${require(`../thumbnail.png`)}" />
     <meta
       property="og:description"
-      content="Marisol Garcia is a front-end web developer. Recent computer science graduate from UNC Charlotte."
+      content="Hi, I'm Marisol Garcia. I'm front-end web developer and a recent computer science graduate from UNC Charlotte. This is my portfolio built with React. Take a look at my projects!"
     />
 
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" /> -->
@@ -31,7 +30,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
