--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <meta
       name="description"
-      content="Marisol Garcia is a front-end web developer. Recent computer science graduate from UNC Charlotte."
+      content="Hi, I'm Marisol Garcia. I'm front-end web developer and a recent computer science graduate from UNC Charlotte. This is my portfolio built with React. Take a look at my projects!"
     />
     <meta name="author" content="Marisol Garcia" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
