added project, fixed safari error

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <meta
       name="description"
-      content="Hi, I'm Marisol Garcia. I'm front-end web developer and a recent computer science graduate from UNC Charlotte. This is my portfolio built with React. Take a look at my projects!"
+      content="I'm Marisol Garcia, a front-end web developer and a recent computer science graduate from UNC Charlotte. This is my portfolio built with React. Take a look at my projects!"
     />
     <meta name="author" content="Marisol Garcia" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -21,7 +21,7 @@
     <meta property="og:url" content="http://www.marsgs.com/" />
     <meta
       property="og:description"
-      content="Hi, I'm Marisol Garcia. I'm front-end web developer and a recent computer science graduate from UNC Charlotte. This is my portfolio built with React. Take a look at my projects!"
+      content="I'm Marisol Garcia, a front-end web developer and a recent computer science graduate from UNC Charlotte. This is my portfolio built with React. Take a look at my projects!"
     />
 
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" /> -->
