--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
     <meta property="og:title" content="Marisol Garcia" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://www.marsgs.com/" />
+    <meta property="og:image" content=”%PUBLIC_URL%/icon.png” />
+
     <meta
       property="og:description"
       content="I'm Marisol Garcia, a front-end web developer and a recent computer science graduate from UNC Charlotte. This is my portfolio built with React. Take a look at my projects!"
