--- a/public/index.html
+++ b/public/index.html
@@ -11,19 +11,18 @@
     />
     <meta
       name="description"
-      content="I'm Marisol Garcia, a front-end web developer and a recent computer science graduate from UNC Charlotte. This is my portfolio built with React. Take a look at my projects!"
+      content="I am a front-end web developer and a recent computer science graduate. This is my portfolio built with React, take a look at my projects!"
     />
     <meta name="author" content="Marisol Garcia" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
     <meta property="og:title" content="Marisol Garcia" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://www.marsgs.com/" />
-    <meta property="og:image" content=”%PUBLIC_URL%/icon.png” />
+    <meta property="og:image:secure" content=”http://www.marsgs.com/image.png” />
 
     <meta
       property="og:description"
-      content="I'm Marisol Garcia, a front-end web developer and a recent computer science graduate from UNC Charlotte. This is my portfolio built with React. Take a look at my projects!"
+      content="I am a front-end web developer and a recent computer science graduate. This is my portfolio built with React, take a look at my projects!"
     />
 
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" /> -->
